--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,11 @@
 }
 
 body {
-  background-image: url('./images/bg.jpg');
+  background:#000;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  font-family: "Poppins", sans-serif;
+  font-family: "Anta", sans-serif;
   line-height: 1;
 }
 .bold {
