--- a/src/components/main/style.css
+++ b/src/components/main/style.css
@@ -13,13 +13,13 @@
  
   font-size: 1.5rem;
   margin-bottom: 0.5em;
-  font-family: "Poppins", sans-serif;
+  font-family: "Anta", sans-serif;
 }
 .main-section .main-section-form {
-  width: 35%;
-  margin-left: 32%;
+  width: 100%;
+  /* margin-left: 32%; */
   text-align: left;
-  background: linear-gradient(to right, rgba(44, 65, 85, 0.8), rgba(33, 37, 40, 0.8));
+  background: linear-gradient(to right, rgba(3, 3, 3, 0.39), rgba(7, 7, 7, 0));
   border-radius: 25px;
   padding: 25px;
   color: #ffffff;
@@ -64,6 +64,7 @@
 
 .mgtp {
   margin: 0.3em 0;
+  color:#65a20f
 }
 
 .link {
@@ -114,10 +115,7 @@
   position: relative;
   background: transparent;
   overflow: hidden;
-  border-top: 1px solid rgba(255, 49, 49, 0.5);
-  border-right: 1px solid rgba(0, 255, 255, 0.5);
-  border-bottom: 1px solid rgba(57, 255, 20, 0.5);
-  border-left: 1px solid rgba(255, 255, 113, 0.5);
+  border: 1px solid #65a20f;
   justify-content: space-around;
 }
 
@@ -128,135 +126,126 @@ span {
   border-radius: 100vmax;
 }
 
-.top {
+.button-86 {
+  all: unset;
+  width: 100px;
+  height: 30px;
+  font-size: 16px;
+  background: transparent;
+  border: none;
+  position: relative;
+  color: #f0f0f0;
+  cursor: pointer;
+  z-index: 1;
+  padding: 10px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  white-space: nowrap;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-86::after,
+.button-86::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: -99999;
+  transition: all .4s;
+}
+
+.button-86::before {
+  transform: translate(0%, 0%);
+  width: 100%;
+  height: 100%;
+  background: #0dbd42;
+  border-radius: 10px;
+}
+
+.button-86::after {
+  transform: translate(10px, 10px);
+  width: 35px;
+  height: 35px;
+  background: #00651e61;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border-radius: 50px;
+}
+
+.button-86:hover::before {
+  transform: translate(5%, 20%);
+  width: 110%;
+  height: 110%;
+}
+
+.button-86:hover::after {
+  border-radius: 10px;
+  transform: translate(0, 0);
+  width: 100%;
+  height: 100%;
+}
+
+.button-86:active::after {
+  transition: 0s;
+  transform: translate(0, 5%);
+}
+
+.header {
+  margin-top: 10px;
+  margin-left: 10%;
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header img {
+  width: 140px;
+}
+.header button {
+  padding: 20px;
+  background: #4b4b4a 0% 0% no-repeat padding-box;
+  box-shadow: 0px 3px 6px #363636ad;
+  border: 1px solid #000000;
+  border-radius: 48px;
+  width: 150px;
+  height: 50px;
+  padding: 5px 15px;
+  cursor: pointer;
+  color: white
+}
+
+@media only screen and (max-width: 768px) {
+  .header {
+    width: 100%;
+    margin: 0;
+    padding: 10px 20px;
+  }
+  .header img {
+    width: 100px;
+  }
+  .header button {
+    padding: 10px;
+    width: 100px;
+    height: 30px;
+    padding: 5px 15px;
+  }
+}
+.sec1 {
+  position: relative;
+}
+
+#background-video {
+  position: absolute;
   top: 0;
   left: 0;
-  width: 0;
-  height: 5px;
-  background: linear-gradient(
-    90deg,
-    transparent 50%,
-    rgba(255, 49, 49, 0.5),
-    rgb(255, 49, 49)
-  );
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
 }
-
-.bottom {
-  right: 0;
-  bottom: 0;
-  height: 5px;
-  background: linear-gradient(
-    90deg,
-    rgb(57, 255, 20),
-    rgba(57, 255, 20, 0.5),
-    transparent 50%
-  );
-}
-
-.right {
-  top: 0;
-  right: 0;
-  width: 5px;
-  height: 0;
-  background: linear-gradient(
-    180deg,
-    transparent 30%,
-    rgba(0, 255, 255, 0.5),
-    rgb(0, 255, 255)
-  );
-}
-
-.left {
-  left: 0;
-  bottom: 0;
-  width: 5px;
-  height: 0;
-  background: linear-gradient(
-    180deg,
-    rgb(255, 255, 113),
-    rgba(255, 255, 113, 0.5),
-    transparent 70%
-  );
-}
-
-.top {
-  animation: animateTop 3s ease-in-out infinite;
-}
-
-.bottom {
-  animation: animateBottom 3s ease-in-out infinite;
-}
-
-.right {
-  animation: animateRight 3s ease-in-out infinite;
-}
-
-.left {
-  animation: animateLeft 3s ease-in-out infinite;
-}
-
-@keyframes animateTop {
-  25% {
-    width: 100%;
-    opacity: 1;
-  }
-
-  30%,
-  100% {
-    opacity: 0;
-  }
-}
-
-@keyframes animateBottom {
-  0%,
-  50% {
-    opacity: 0;
-    width: 0;
-  }
-
-  75% {
-    opacity: 1;
-    width: 100%;
-  }
-
-  76%,
-  100% {
-    opacity: 0;
-  }
-}
-
-@keyframes animateRight {
-  0%,
-  25% {
-    opacity: 0;
-    height: 0;
-  }
-
-  50% {
-    opacity: 1;
-    height: 100%;
-  }
-
-  55%,
-  100% {
-    height: 100%;
-    opacity: 0;
-  }
-}
-
-@keyframes animateLeft {
-  0%,
-  75% {
-    opacity: 0;
-    bottom: 0;
-    height: 0;
-  }
-
-  100% {
-    opacity: 1;
-    height: 100%;
-  }
-}
-
 
 
